# test-submodule

BSP/meta/meta-mediatek-mt8110/: .gitignore
BSP/meta/meta-mediatek-mt8110/classes/: create-mtdverity.bbclass  create-nfsb.bbclass  create-sparse-image.bbclass  extraexternalsrc.bbclass  hsm-sign-env.bbclass  kernel-fitimage-extension.bbclass  kernel-uboot-extension.bbclass  lk-image.bbclass  mkusrdata.bbclass  recovery-kernel-fitimage.bbclass  staging-copyfile.bbclass  trustzone-build.bbclass  trustzone-fitimage.bbclass  tzsrcprebuilt.bbclass  u-boot-fitimage.bbclass  workonsrc.bbclass
BSP/meta/meta-mediatek-mt8110/conf/: layer.conf
BSP/meta/meta-mediatek-mt8110/conf/machine/: aud8110fpga-emmc.conf  aud8110m1-emmc.conf  aud8110p1.conf  aud8110p2-d1.conf  aud8110p2-d2.conf  aud8112p1.conf  aud8113lp1.conf  aud8113p1.conf  aud8113tp1.conf
BSP/meta/meta-mediatek-mt8110/files/additional-licenses/: MediaTekProprietary
BSP/meta/meta-mediatek-mt8110/recipes-autotest/autotest/: autotest.bb
BSP/meta/meta-mediatek-mt8110/recipes-autotest/getprop/: getprop.bb
BSP/meta/meta-mediatek-mt8110/recipes-autotest/keypad/: keypad.bb
BSP/meta/meta-mediatek-mt8110/recipes-autotest/poweron/: poweron.bb
BSP/meta/meta-mediatek-mt8110/recipes-benchmark/memtester/: memtester_4.5.1.bb
BSP/meta/meta-mediatek-mt8110/recipes-bsp/energy-aware/: energy-aware.bb
BSP/meta/meta-mediatek-mt8110/recipes-bsp/lk/: lk_2.0.0.bb
BSP/meta/meta-mediatek-mt8110/recipes-bsp/scatter/: scatter.bb
BSP/meta/meta-mediatek-mt8110/recipes-bsp/trustzone/: atf_1.2.bb  atf_1.6.bb  optee-client_3.2.0.bb  optee-os_3.2.0.bb  optee-services.bb  optee-test_3.2.0.bb  tee-mtee.bb  teeloader.bb  trustzone.bb
BSP/meta/meta-mediatek-mt8110/recipes-bsp/u-boot/: u-boot-common_2016.11.inc  u-boot-mkimage_2016.11.bb  u-boot_2019.04.bb
BSP/meta/meta-mediatek-mt8110/recipes-connectivity/bluetooth/: bluetooth-vendor.bb  bluetooth.bb
BSP/meta/meta-mediatek-mt8110/recipes-connectivity/mt6631/: mt6631-wifi-fw.bb  mtkcombotool.bb
BSP/meta/meta-mediatek-mt8110/recipes-connectivity/wifitesttool/: mtkwifitesttool.bb
BSP/meta/meta-mediatek-mt8110/recipes-connectivity/wireless-tools/: wireless-tools_%.bbappend
BSP/meta/meta-mediatek-mt8110/recipes-connectivity/wpa-supplicant/: wpa-supplicant_2.9.bb
BSP/meta/meta-mediatek-mt8110/recipes-core/base-files/: base-files_%.bbappend
BSP/meta/meta-mediatek-mt8110/recipes-core/busybox-append/: busybox_%.bbappend
BSP/src/bsp/lk/: .gitignore  Android.mk  LICENSE  makefile
BSP/src/bsp/scatter/: LICENSE  README
BSP/src/bsp/u-boot/: Makefile
BSP/src/connectivity/bt_others/vendor_lib/mt66xx/mtk/hw_test_tool/: Android.mk  BUILD.gn  autobt.c  bt_hw_test.c  bt_hw_test.h
BSP/src/connectivity/bt_others/vendor_lib/mt66xx/mtk/pure/combo/: Android.mk  BUILD.gn  bt_em.c  bt_kal.h  bt_relayer.c  btsnoop.c  mtk.c  os_dep.h  radiomod.c
BSP/src/connectivity/combo_tool/: Makefile.am  launcher-service  launcher.service  launcher_6627.service  mt6630_drv_insmod.sh  mt66xx_drv_insmod.service  mt7668_drv_insmod.service  mt7668_drv_insmod.sh  product_package.mk  stp_dump-service  stp_dump.service  wmtd-service  wmtd.service
BSP/src/connectivity/combo_tool/6631_combo_tool/: Makefile.am  configure.ac  launcher-service  launcher_6627.service  mt6631_drv_insmod.sh  mt66xx_drv_insmod-service  mt66xx_drv_insmod.service  poweronwifi.service  stp_dump-service  stp_dump.service  wmtd.service
BSP/src/connectivity/combo_tool/6631_combo_tool/cfg_folder/: WMT_SOC.cfg  WMT_STEP_CONNAC.cfg
BSP/src/connectivity/combo_tool/6631_combo_tool/combo_loader/: loader.c  loader.h  yocto_loader.c
BSP/src/connectivity/combo_tool/6631_combo_tool/src/: Android.mk  power_on_wifi.c  stp_uart_launcher.c  wmt_ioctl.h  wmt_loopback.c  yocto_stp_uart_launcher.c  yocto_wmt_concurrency.c
BSP/src/connectivity/combo_tool/6631_combo_tool/src/stp_dump/: bt_fw_logger.c  bt_fw_logger.h  eloop.c  stp_dump.c  stp_dump.h  wifi_fw_logger.c  wifi_fw_logger.h
BSP/src/connectivity/combo_tool/combo_loader/: yocto_loader.c
BSP/src/connectivity/combo_tool/patch_folder/: WIFI_RAM_CODE_MT6630
BSP/src/connectivity/combo_tool/src/: serial.h  stp_uart_launcher.c  wmt_loopback.c  yocto_stp_uart_launcher.c
BSP/src/connectivity/combo_tool/src/stp_dump/: eloop.c  os_linux.c  stp_dump.c  stp_dump.h
BSP/src/connectivity/wifitesttool/: Makefile.am  configure.ac
BSP/src/connectivity/wifitesttool/libwifitest/: Makefile.am  libwifitest.c  libwifitest.h  main.c
BSP/src/connectivity/wifitesttool/wifi_hw_test_tool/: Makefile.am  lib.c  main.c
BSP/src/devtools/datool/: README  fbtool.py
BSP/src/devtools/nfsb/: pretreat-key.py  zero_padding.sh
BSP/src/multimedia/mdpd3/: Android.mk  Makefile  has_platform.mk  libmdp.mk  libmdp.platform.mk  libmdp.target.mk
BSP/src/multimedia/mmtest/: Makefile
BSP/src/multimedia/mtk-ovl-adapter/: Android.mk  Makefile  mtk_ovl_adapter.c  mtk_ovl_adapter.h  videodev2.h
BSP/src/support/efuse_writer/: Makefile  README  ewriter.c  ewriter.h
BSP/src/support/libion/: Makefile  ion.c
BSP/src/support/libnvram_custom/: Makefile  Makefile.config  Makefile.template
BSP/src/support/nvram/: Makefile  Makefile.APDB  Makefile.NvRAMUtils  Makefile.libfile_op  Makefile.libnvram  Makefile.nvram_daemon  Makefile.wfbt_wr
(+3932 files in other folders)
