#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

shared_library("libbluetooth_hw_test") {
  sources = [
    "bt_hw_test.c",
  ]

  include_dirs = [

  ]

  deps = [

  ]

  cflags_c = [

  ]

  libs = [
    "-ldl",
    "-lpthread",
  ]
}

executable("autobt") {
  sources = [
    "autobt.c",
  ]

  include_dirs = [

  ]

  deps = [
    "//mtk/hw_test_tool:libbluetooth_hw_test",
    "//mtk/pure/combo:libbluetooth_mtk_pure",
    "//mtk/pure/combo:libbluetoothem_mtk",
    "//mtk/pure/combo:libbluetooth_relayer",
  ]

  cflags_c = [

  ]

  libs = [
    nvram_custom_link,
    nvram_link,
  ]
}