#
#  Copyright (C) 2015 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

shared_library("libbluetooth_mtk_pure_btsnoop") {
  sources = [
    "btsnoop.c",
  ]

  include_dirs = [
    "//mtk/pure/inc",
  ]

  deps = [

  ]

  cflags_c = [
    "-Lobj/osi",
    "-losi",
  ]

  libs = [
    "-lpthread",
  ]
}

shared_library("libbluetooth_mtk_pure") {
  sources = [
    "mtk.c",
    "radiomgr.c",
    "radiomod.c",
  ]

  include_dirs = [
    "//mtk/pure/inc",
  ]

  deps = [

  ]

  cflags_c = [
    "-Lobj/osi",
    "-losi",
  ]

  libs = [
    cutils_link,
    nvram_custom_link,
    nvram_link,
    file_op_link,
  ]
}

shared_library("libbluetoothem_mtk") {
  sources = [
    "bt_em.c",
  ]

  include_dirs = [
    "//mtk/pure/inc",
  ]

  deps = [
    "//mtk/pure/combo:libbluetooth_mtk_pure",
  ]

  cflags_c = [

  ]

  libs = [
    "-ldl",
  ]
}

shared_library("libbluetooth_relayer") {
  sources = [
    "bt_relayer.c",
  ]

  include_dirs = [
    "//mtk/pure/inc",
  ]

  deps = [
    "//mtk/pure/combo:libbluetoothem_mtk",
  ]

  cflags_c = [

  ]

  libs = [
    cutils_link,
    "-lpthread",
  ]
}